Ajout bouton cmde Spectro

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # only ignore the TODO file in the current directory, not subdir/TODO
 /TODO
 
-# ignore all files in any directory named build
+# ignore all files in any directory named build Construction
 build/
 Construction/
 
